[package]
name = "g_ui"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
rfd = "0.11.3"
png_parser = { path = "./png_parser" }
g_translator_m = { path = "./g_translator_m" }
serde_json = "1.0.96"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.27.0", features = ["full"] }
catbox = "0.8.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = "0.2.1"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4.34"
wasm-bindgen = "0.2.84"
futures = "0.3.28"
catbox_wasm = { path = "./catbox_wasm" }
web-sys = { version = "0.3.61", features = ["Clipboard", "Navigator", "Window"] }
console_error_panic_hook = "0.1.6"


[lib]
crate-type = ["cdylib", "rlib"]


[profile.release]
lto = true
opt-level = 'z'

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2