[package]
name = "catbox_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = ["FormData", "Request", "RequestMode", "Response", "Blob", "RequestInit", "Window"] }
js-sys = "0.3.61"
futures = "0.3.28"
shared_constants = { path = "../shared_constants" }