[package]
name = "g_translator_m"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
scraper = "0.16.0"
reqwest = "0.11.16"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
shared_constants = { path = "../shared_constants" }