[package]
name = "png_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
serde = { version = "1.0.160", features = ["derive"] }
base64 = "0.21.0"
crc32fast = "1.3.2"
bytes = "1.4.0"
